mcprbatl/parser/model/CGSModelParser.py
# Generated from C:/Users/ac1222/OneDrive -Coventry University/GitHub/mcPRBATL/mcprbatl/parser/grammar\CGSModel.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing import TextIO
import sys



class CGSModelParser ( Parser ):

    grammarFileName = "CGSModel.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Structure'", "'='", "'{'", "','", "'}'", 
                     "'->'", "'('", "')'", "':'", "<INVALID>", "'0'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "POSITIVE_NUMBER", "NUMBER_0", 
                      "POSITIVE_REAL_NUMBER", "NAME", "WS", "LINE_COMMENT" ]

    RULE_structure = 0
    RULE_agents = 1
    RULE_resources = 2
    RULE_gstates = 3
    RULE_gstate = 4
    RULE_propositions = 5
    RULE_proposition = 6
    RULE_labellings = 7
    RULE_labelling = 8
    RULE_availables = 9
    RULE_available = 10
    RULE_costings = 11
    RULE_costing = 12
    RULE_cost = 13
    RULE_transitions = 14
    RULE_transition = 15
    RULE_move = 16
    RULE_states_distribution = 17
    RULE_state_dist = 18
    RULE_positive_number = 19
    RULE_number = 20

    ruleNames =  [ "structure", "agents", "resources", "gstates", "gstate", 
                   "propositions", "proposition", "labellings", "labelling", 
                   "availables", "available", "costings", "costing", "cost", 
                   "transitions", "transition", "move", "states_distribution", 
                   "state_dist", "positive_number", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    POSITIVE_NUMBER=10
    NUMBER_0=11
    POSITIVE_REAL_NUMBER=12
    NAME=13
    WS=14
    LINE_COMMENT=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StructureContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(CGSModelParser.NAME, 0)

        def agents(self):
            return self.getTypedRuleContext(CGSModelParser.AgentsContext,0)


        def resources(self):
            return self.getTypedRuleContext(CGSModelParser.ResourcesContext,0)


        def gstates(self):
            return self.getTypedRuleContext(CGSModelParser.GstatesContext,0)


        def propositions(self):
            return self.getTypedRuleContext(CGSModelParser.PropositionsContext,0)


        def labellings(self):
            return self.getTypedRuleContext(CGSModelParser.LabellingsContext,0)


        def availables(self):
            return self.getTypedRuleContext(CGSModelParser.AvailablesContext,0)


        def costings(self):
            return self.getTypedRuleContext(CGSModelParser.CostingsContext,0)


        def transitions(self):
            return self.getTypedRuleContext(CGSModelParser.TransitionsContext,0)


        def getRuleIndex(self):
            return CGSModelParser.RULE_structure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructure" ):
                listener.enterStructure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructure" ):
                listener.exitStructure(self)




    def structure(self):

        localctx = CGSModelParser.StructureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_structure)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(CGSModelParser.T__0)
            self.state = 43
            self.match(CGSModelParser.NAME)
            self.state = 44
            self.match(CGSModelParser.T__1)
            self.state = 45
            self.match(CGSModelParser.T__2)
            self.state = 46
            self.agents()
            self.state = 47
            self.match(CGSModelParser.T__3)
            self.state = 48
            self.resources()
            self.state = 49
            self.match(CGSModelParser.T__3)
            self.state = 50
            self.gstates()
            self.state = 51
            self.match(CGSModelParser.T__3)
            self.state = 52
            self.propositions()
            self.state = 53
            self.match(CGSModelParser.T__3)
            self.state = 54
            self.labellings()
            self.state = 55
            self.match(CGSModelParser.T__3)
            self.state = 56
            self.availables()
            self.state = 57
            self.match(CGSModelParser.T__3)
            self.state = 58
            self.costings()
            self.state = 59
            self.match(CGSModelParser.T__3)
            self.state = 60
            self.transitions()
            self.state = 61
            self.match(CGSModelParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AgentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POSITIVE_NUMBER(self):
            return self.getToken(CGSModelParser.POSITIVE_NUMBER, 0)

        def getRuleIndex(self):
            return CGSModelParser.RULE_agents

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgents" ):
                listener.enterAgents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgents" ):
                listener.exitAgents(self)




    def agents(self):

        localctx = CGSModelParser.AgentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_agents)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(CGSModelParser.POSITIVE_NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourcesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(CGSModelParser.NumberContext,0)


        def getRuleIndex(self):
            return CGSModelParser.RULE_resources

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResources" ):
                listener.enterResources(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResources" ):
                listener.exitResources(self)




    def resources(self):

        localctx = CGSModelParser.ResourcesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_resources)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GstatesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gstate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CGSModelParser.GstateContext)
            else:
                return self.getTypedRuleContext(CGSModelParser.GstateContext,i)


        def getRuleIndex(self):
            return CGSModelParser.RULE_gstates

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGstates" ):
                listener.enterGstates(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGstates" ):
                listener.exitGstates(self)




    def gstates(self):

        localctx = CGSModelParser.GstatesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_gstates)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(CGSModelParser.T__2)
            self.state = 68
            self.gstate()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CGSModelParser.T__3:
                self.state = 69
                self.match(CGSModelParser.T__3)
                self.state = 70
                self.gstate()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(CGSModelParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GstateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(CGSModelParser.NAME, 0)

        def getRuleIndex(self):
            return CGSModelParser.RULE_gstate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGstate" ):
                listener.enterGstate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGstate" ):
                listener.exitGstate(self)




    def gstate(self):

        localctx = CGSModelParser.GstateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_gstate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(CGSModelParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropositionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def proposition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CGSModelParser.PropositionContext)
            else:
                return self.getTypedRuleContext(CGSModelParser.PropositionContext,i)


        def getRuleIndex(self):
            return CGSModelParser.RULE_propositions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropositions" ):
                listener.enterPropositions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropositions" ):
                listener.exitPropositions(self)




    def propositions(self):

        localctx = CGSModelParser.PropositionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_propositions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(CGSModelParser.T__2)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CGSModelParser.NAME:
                self.state = 81
                self.proposition()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CGSModelParser.T__3:
                    self.state = 82
                    self.match(CGSModelParser.T__3)
                    self.state = 83
                    self.proposition()
                    self.state = 88
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 91
            self.match(CGSModelParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropositionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(CGSModelParser.NAME, 0)

        def getRuleIndex(self):
            return CGSModelParser.RULE_proposition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProposition" ):
                listener.enterProposition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProposition" ):
                listener.exitProposition(self)




    def proposition(self):

        localctx = CGSModelParser.PropositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_proposition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(CGSModelParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabellingsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def labelling(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CGSModelParser.LabellingContext)
            else:
                return self.getTypedRuleContext(CGSModelParser.LabellingContext,i)


        def getRuleIndex(self):
            return CGSModelParser.RULE_labellings

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabellings" ):
                listener.enterLabellings(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabellings" ):
                listener.exitLabellings(self)




    def labellings(self):

        localctx = CGSModelParser.LabellingsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_labellings)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(CGSModelParser.T__2)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CGSModelParser.NAME:
                self.state = 96
                self.labelling()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CGSModelParser.T__3:
                    self.state = 97
                    self.match(CGSModelParser.T__3)
                    self.state = 98
                    self.labelling()
                    self.state = 103
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 106
            self.match(CGSModelParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabellingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def proposition(self):
            return self.getTypedRuleContext(CGSModelParser.PropositionContext,0)


        def gstates(self):
            return self.getTypedRuleContext(CGSModelParser.GstatesContext,0)


        def getRuleIndex(self):
            return CGSModelParser.RULE_labelling

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabelling" ):
                listener.enterLabelling(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabelling" ):
                listener.exitLabelling(self)




    def labelling(self):

        localctx = CGSModelParser.LabellingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_labelling)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.proposition()
            self.state = 109
            self.match(CGSModelParser.T__5)
            self.state = 110
            self.gstates()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AvailablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def available(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CGSModelParser.AvailableContext)
            else:
                return self.getTypedRuleContext(CGSModelParser.AvailableContext,i)


        def getRuleIndex(self):
            return CGSModelParser.RULE_availables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAvailables" ):
                listener.enterAvailables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAvailables" ):
                listener.exitAvailables(self)




    def availables(self):

        localctx = CGSModelParser.AvailablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_availables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(CGSModelParser.T__2)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CGSModelParser.T__6:
                self.state = 113
                self.available()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CGSModelParser.T__3:
                    self.state = 114
                    self.match(CGSModelParser.T__3)
                    self.state = 115
                    self.available()
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 123
            self.match(CGSModelParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AvailableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gstate(self):
            return self.getTypedRuleContext(CGSModelParser.GstateContext,0)


        def POSITIVE_NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(CGSModelParser.POSITIVE_NUMBER)
            else:
                return self.getToken(CGSModelParser.POSITIVE_NUMBER, i)

        def getRuleIndex(self):
            return CGSModelParser.RULE_available

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAvailable" ):
                listener.enterAvailable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAvailable" ):
                listener.exitAvailable(self)




    def available(self):

        localctx = CGSModelParser.AvailableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_available)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(CGSModelParser.T__6)
            self.state = 126
            self.gstate()
            self.state = 127
            self.match(CGSModelParser.T__3)
            self.state = 128
            self.match(CGSModelParser.POSITIVE_NUMBER)
            self.state = 129
            self.match(CGSModelParser.T__7)
            self.state = 130
            self.match(CGSModelParser.T__5)
            self.state = 131
            self.match(CGSModelParser.POSITIVE_NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CostingsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def costing(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CGSModelParser.CostingContext)
            else:
                return self.getTypedRuleContext(CGSModelParser.CostingContext,i)


        def getRuleIndex(self):
            return CGSModelParser.RULE_costings

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCostings" ):
                listener.enterCostings(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCostings" ):
                listener.exitCostings(self)




    def costings(self):

        localctx = CGSModelParser.CostingsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_costings)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(CGSModelParser.T__2)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CGSModelParser.T__6:
                self.state = 134
                self.costing()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CGSModelParser.T__3:
                    self.state = 135
                    self.match(CGSModelParser.T__3)
                    self.state = 136
                    self.costing()
                    self.state = 141
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 144
            self.match(CGSModelParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CostingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gstate(self):
            return self.getTypedRuleContext(CGSModelParser.GstateContext,0)


        def POSITIVE_NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(CGSModelParser.POSITIVE_NUMBER)
            else:
                return self.getToken(CGSModelParser.POSITIVE_NUMBER, i)

        def cost(self):
            return self.getTypedRuleContext(CGSModelParser.CostContext,0)


        def getRuleIndex(self):
            return CGSModelParser.RULE_costing

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCosting" ):
                listener.enterCosting(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCosting" ):
                listener.exitCosting(self)




    def costing(self):

        localctx = CGSModelParser.CostingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_costing)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(CGSModelParser.T__6)
            self.state = 147
            self.gstate()
            self.state = 148
            self.match(CGSModelParser.T__3)
            self.state = 149
            self.match(CGSModelParser.POSITIVE_NUMBER)
            self.state = 150
            self.match(CGSModelParser.T__3)
            self.state = 151
            self.match(CGSModelParser.POSITIVE_NUMBER)
            self.state = 152
            self.match(CGSModelParser.T__7)
            self.state = 153
            self.match(CGSModelParser.T__5)
            self.state = 154
            self.cost()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CostContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CGSModelParser.NumberContext)
            else:
                return self.getTypedRuleContext(CGSModelParser.NumberContext,i)


        def getRuleIndex(self):
            return CGSModelParser.RULE_cost

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCost" ):
                listener.enterCost(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCost" ):
                listener.exitCost(self)




    def cost(self):

        localctx = CGSModelParser.CostContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_cost)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(CGSModelParser.T__6)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CGSModelParser.POSITIVE_NUMBER or _la==CGSModelParser.NUMBER_0:
                self.state = 157
                self.number()
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CGSModelParser.T__3:
                    self.state = 158
                    self.match(CGSModelParser.T__3)
                    self.state = 159
                    self.number()
                    self.state = 164
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 167
            self.match(CGSModelParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransitionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def transition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CGSModelParser.TransitionContext)
            else:
                return self.getTypedRuleContext(CGSModelParser.TransitionContext,i)


        def getRuleIndex(self):
            return CGSModelParser.RULE_transitions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransitions" ):
                listener.enterTransitions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransitions" ):
                listener.exitTransitions(self)




    def transitions(self):

        localctx = CGSModelParser.TransitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_transitions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(CGSModelParser.T__2)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CGSModelParser.T__6:
                self.state = 170
                self.transition()
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CGSModelParser.T__3:
                    self.state = 171
                    self.match(CGSModelParser.T__3)
                    self.state = 172
                    self.transition()
                    self.state = 177
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 180
            self.match(CGSModelParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gstate(self):
            return self.getTypedRuleContext(CGSModelParser.GstateContext,0)


        def move(self):
            return self.getTypedRuleContext(CGSModelParser.MoveContext,0)


        def states_distribution(self):
            return self.getTypedRuleContext(CGSModelParser.States_distributionContext,0)


        def getRuleIndex(self):
            return CGSModelParser.RULE_transition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransition" ):
                listener.enterTransition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransition" ):
                listener.exitTransition(self)




    def transition(self):

        localctx = CGSModelParser.TransitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_transition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(CGSModelParser.T__6)
            self.state = 183
            self.gstate()
            self.state = 184
            self.match(CGSModelParser.T__3)
            self.state = 185
            self.move()
            self.state = 186
            self.match(CGSModelParser.T__7)
            self.state = 187
            self.match(CGSModelParser.T__5)
            self.state = 188
            self.states_distribution()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def positive_number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CGSModelParser.Positive_numberContext)
            else:
                return self.getTypedRuleContext(CGSModelParser.Positive_numberContext,i)


        def getRuleIndex(self):
            return CGSModelParser.RULE_move

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMove" ):
                listener.enterMove(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMove" ):
                listener.exitMove(self)




    def move(self):

        localctx = CGSModelParser.MoveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_move)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.match(CGSModelParser.T__6)
            self.state = 199
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CGSModelParser.POSITIVE_NUMBER:
                self.state = 191
                self.positive_number()
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CGSModelParser.T__3:
                    self.state = 192
                    self.match(CGSModelParser.T__3)
                    self.state = 193
                    self.positive_number()
                    self.state = 198
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 201
            self.match(CGSModelParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class States_distributionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def state_dist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CGSModelParser.State_distContext)
            else:
                return self.getTypedRuleContext(CGSModelParser.State_distContext,i)


        def getRuleIndex(self):
            return CGSModelParser.RULE_states_distribution

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStates_distribution" ):
                listener.enterStates_distribution(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStates_distribution" ):
                listener.exitStates_distribution(self)




    def states_distribution(self):

        localctx = CGSModelParser.States_distributionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_states_distribution)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self.match(CGSModelParser.T__2)
            self.state = 212
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CGSModelParser.NAME:
                self.state = 204
                self.state_dist()
                self.state = 209
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CGSModelParser.T__3:
                    self.state = 205
                    self.match(CGSModelParser.T__3)
                    self.state = 206
                    self.state_dist()
                    self.state = 211
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 214
            self.match(CGSModelParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_distContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gstate(self):
            return self.getTypedRuleContext(CGSModelParser.GstateContext,0)


        def POSITIVE_REAL_NUMBER(self):
            return self.getToken(CGSModelParser.POSITIVE_REAL_NUMBER, 0)

        def getRuleIndex(self):
            return CGSModelParser.RULE_state_dist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_dist" ):
                listener.enterState_dist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_dist" ):
                listener.exitState_dist(self)




    def state_dist(self):

        localctx = CGSModelParser.State_distContext(self, self._ctx, self.state)
